--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
   <footer>
     <div class="footer_main">
       <div class="footer_text">
-        <p>경기도 고양시 백마로 195 102동 505호</p>
+        <p>경기도 고양시 덕양구 백양로 82. 206호-B259</p>
         <span>사업자등록번호 : 123-45-67890</span>
         <span>대표자 : 김성진</span>
         <span class="footer_right">©2023 스튜디오야수 Corp. All Rights Reserved.</span>
