gitignore new2 upload

--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -316,7 +316,7 @@
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">이메일로 연락 주시면 친절하게 답변해 드리겠습니다.</div>
+            <div class="accordion-body">이메일로 연락 주시면 친절히 답변해 드리겠습니다.</div>
           </div>
         </div>
       </div>
