news models1 upload

--- a/templates/works/detail.html
+++ b/templates/works/detail.html
@@ -45,7 +45,7 @@
                 </li>
                 <li>
                     <span class="works_detail_li">개봉날짜</span>
-                    <span class="works_detail_lx">{{index.create_date|date:"Y. m. d"}}</span>
+                    <span class="works_detail_lx">{{index.create_date}}</span>
                 </li>
                 <li>
                     <span class="works_detail_li">줄거리</span>
