--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -19,7 +19,7 @@
 
         <div class="img_about_main">
         <div class="img_about_one">ABOUT</div>
-        <div class="img_about_two">최고의 이야기를 담은 영화를 제작, 감동과 재미를 넘어선 경험을 선사합니다.</div>
+        <div class="img_about_two">최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다.</div>
         </div>
     </div>
     <div class="about_animation">
@@ -30,11 +30,11 @@
             </div>
             <div class="about_main_two_wrapper">
                 <div class="about_main_two_text">감동과 연결</div>
-                우리는 진보적이고 혁신적인 아이디어를 통해 관객에게 새로운 경험을 제공하고 영화 산업에서 선도적인 위치를 차지하기 위해 노력합니다.
+                우리는 진보적이고 혁신적인 아이디어를 통해 관객에게 새로운 경험을 제공하고 콘텐츠 산업에서 선도적인 위치를 차지하기 위해 노력합니다.
             </div>
             <div class="about_main_two_wrapper">
                 <div class="about_main_two_text">세계적 영향력</div>
-                우리는 국내뿐만 아니라 국제 시장에서도 인정받는 작품을 제작하여 한국 영화 산업의 성장과 발전에 기여하고자 합니다.
+                우리는 국내뿐만 아니라 국제 시장에서도 인정받는 작품을 제작하여 K-콘텐츠 산업의 성장과 발전에 기여하고자 합니다.
             </div>
         </div>
 
