--- a/static/css/index.css
+++ b/static/css/index.css
@@ -20,6 +20,18 @@ body {
       opacity: 1;
     }
   }
+@keyframes slideInFromTop2 {
+    0% {
+      transform: translate(-50%, -70%);
+      opacity: 0;
+    }
+    100% {
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      opacity: 1;
+    }
+  }
 
 @keyframes slideInLeft {
   0% {
@@ -322,63 +334,88 @@ body {
     margin-bottom: 2rem;
   }
 
-  .main_three_wrapper {
+  .works_container_three {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
     flex-wrap: wrap;
-    align-content: center;
+    justify-content: center;
+    width: 1000px;
+    margin: 3rem auto 0 auto;
   }
 
-  .main_three_img {
-    flex-shrink: 0;
-    margin: 2rem 3rem 0 3rem;
-    position: relative;
+  .works_main_three {
+    width: 33%;
+    text-align: center;
+    margin-bottom: 3rem;
+    cursor: pointer;
   }
 
-  .main_three_img img {
+  .works_main_three span {
     width: 230px;
-    height: auto;
-    object-fit: cover;
-    background-color: #f3f3f3;
+    height: 331px;
+    overflow: hidden;
+    display: inline-block;
   }
 
-  .main_three_img span {
-    position: absolute;
-    top: 10%;
-    left: 0;
-    opacity: 0;
-    font-size: 1rem;
-    color: #fff;
-    font-weight: 100;
-    padding: 0.5rem 1rem;
+  .works_over_three {
+      width: 230px;
+      height: 331px;
+      overflow: hidden;
+      display: inline-block;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
   }
 
-  .main_three_img:hover span {
-    opacity: 1;
-    cursor: pointer;
+  .works_main_three span.works_text_three {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 0.5rem;
+      width: 230px;
+      height: 331px;
+      color: white;
+      background-color: rgb(50 50 50);
+      flex-direction: column;
+      transition: transform 0.3s;
   }
 
-  .main_three_img:hover p {
-    height: 100%;
-    cursor: pointer;
+  .works_main_three:hover .works_text_three{
+      transform: scale(1.05);
+      transform-origin: center;
+  }
+    
+  .works_main_three span.works_text_three h2 {
+      text-align: center;
+      font-size: 1.8rem;
+      padding: 0rem 1rem;
+      font-weight: 500;
+      width: 100%;
   }
 
-  .main_three_img p {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    margin: 0;
-    padding: 0.5rem 1rem;
-    text-align: start;
-    font-size: 1rem;
-    background-color: #0e0e0e;
-    color: #fff;
-    font-weight: 600;
+  .works_main_three span.works_text_three h3 {
+      text-align: center;
+      font-size: 1rem;
+      padding: 0rem 1rem;
+      margin: 0 0 1rem 0;
+      font-weight: 400;
+      width: 100%;
+      height: 116px;
   }
-
+    
+  .works_main_three span.works_text_three p {
+      text-align: start;
+      font-size: 1rem;
+      padding: 0rem 1rem;
+      font-weight: 300;
+      width: 100%;
+      margin: 0.2rem;
+  }
+    
+  .works_main_three h2 {
+      font-size: 1.3rem;
+      margin: 0.5rem 0;
+      font-weight: 600;
+      text-align: center;
+  }
+  
   /* 홈페이지 네번째 단 */  
 
   .main_four{
@@ -727,7 +764,7 @@ body {
   .main_three {
     display: block;
     margin: 0 auto;
-    width: 100vw;
+    width: 700px;
   }
 
   .main_three_text {
@@ -740,7 +777,6 @@ body {
     font-size: 4rem;
     font-weight: 700;
     color: #000000;
-    padding: 0;
     opacity: 0;
   }
 
@@ -748,63 +784,100 @@ body {
     font-size: 1.3rem;
     width: 80vw;
     margin: 0 auto;
-    text-align: center;
+    margin-bottom: 2rem;
   }
 
-  .main_three_wrapper {
+  .works_container_three {
     display: flex;
-    align-items: center;
-    align-content: center;
     flex-wrap: wrap;
     justify-content: center;
-    flex-direction: row;
+    width: 700px;
+    margin: 3rem auto;
   }
 
-  .main_three_img {
-    flex-shrink: 0;
-    margin: 2rem;
-    position: relative;
-  }
-
-  .main_three_img img {
-    width: 200px;
-    height: auto;
-    object-fit: cover;
-    background-color: #f3f3f3;
-  }
-
-  .main_three_img span {
-    position: absolute;
-    top: 10%;
-    left: 0;
-    opacity: 0;
-    font-size: 1rem;
-    color: #fff;
-    font-weight: 100;
-    padding: 0.5rem 1rem;
-  }
-
-  .main_three_img:hover span {
-    opacity: 1;
+  .works_main_three {
+    width: 33.33%;
+    text-align: center;
+    margin-bottom: 3rem;
     cursor: pointer;
   }
 
-  .main_three_img:hover p {
-    height: 100%;
-    cursor: pointer;
+  .works_main_three span {
+    width: 180px;
+    height: 256px;
+    overflow: hidden;
+    display: inline-block;
   }
 
-  .main_three_img p {
-    position: absolute; /* 추가 */
-    bottom: 0; /* 추가 */
-    left: 0; /* 추가 */
-    width: 100%; /* 추가 */
-    margin: 0;
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    background-color: #0e0e0e;
-    color: #fff;
-    font-weight: 600;
+  .works_over_three {
+      width: 180px;
+      height: 256px;
+      overflow: hidden;
+      display: inline-block;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
+  }
+
+  .works_main_three span.works_text_three {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 0.5rem;
+      width: 180px;
+      height: 256px;
+      color: white;
+      background-color: rgb(50 50 50);
+      flex-direction: column;
+      transition: transform 0.3s;
+  }
+
+  .works_main_three:hover .works_text_three{
+      transform: scale(1.05);
+      transform-origin: center;
+  }
+    
+  .works_main_three span.works_text_three h2 {
+      text-align: center;
+      font-size: 1.6rem;
+      padding: 0rem 1rem;
+      font-weight: 500;
+      width: 100%;
+  }
+
+  .works_main_three span.works_text_three h3 {
+      text-align: center;
+      font-size: 0.9rem;
+      padding: 0rem 1rem;
+      margin: 0 0 1rem 0;
+      font-weight: 400;
+      width: 100%;
+      height: 70px;
+  }
+    
+  .works_main_three span.works_text_three p {
+      text-align: start;
+      font-size: 0.9rem;
+      padding: 0rem 1rem;
+      font-weight: 300;
+      width: 100%;
+      margin: 0.2rem;
+  }
+    
+  .works_main_three span img {
+      width: 100%;
+      height: 100%;
+      transition: transform 0.3s;
+  }
+    
+  .works_main_three:hover img {
+      transform: scale(1.1);
+      transform-origin: center;
+  }
+    
+  .works_main_three h2 {
+      font-size: 1.3rem;
+      margin: 0.5rem 0;
+      font-weight: 600;
+      text-align: center;
   }
 
   /* 홈페이지 네번째 단 */  
@@ -1183,63 +1256,103 @@ body {
     font-size: 1rem;
     width: 80vw;
     margin: 0 auto;
-    text-align: center;
+    margin-bottom: 2rem;
   }
 
-  .main_three_wrapper {
+  .works_container_three {
     display: flex;
     align-items: center;
     align-content: center;
     flex-wrap: wrap;
     justify-content: center;
     flex-direction: row;
+    margin: 1rem auto;
   }
 
-  .main_three_img {
+  .works_main_three {
     flex-shrink: 0;
     margin: 1rem 0.5rem;
     position: relative;
+    cursor: pointer;
   }
 
-  .main_three_img img {
+  .works_main_three span {
     width: 150px;
-    height: auto;
-    object-fit: cover;
-    background-color: #f3f3f3;
+    height: 213px;
+    overflow: hidden;
+    display: inline-block;
   }
 
-  .main_three_img span {
-    position: absolute;
-    top: 10%;
-    left: 0;
-    opacity: 0;
-    font-size: 0.9rem;
-    color: #fff;
-    font-weight: 100;
-    padding: 1rem 0.5rem;
+  .works_over_three {
+      width: 150px;
+      height: 213px;
+      overflow: hidden;
+      display: inline-block;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
   }
 
-  .main_three_img:hover span {
-    opacity: 1;
-    cursor: pointer;
+
+  .works_main_three span.works_text_three {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 0.5rem;
+      width: 150px;
+      height: 213px;
+      color: white;
+      background-color: rgb(50 50 50);
+      flex-direction: column;
+      transition: transform 0.3s;
   }
 
-  .main_three_img:hover p {
-    height: 100%;
-    cursor: pointer;
+  .works_main_three:hover .works_text_three{
+      transform: scale(1.05);
+      transform-origin: center;
+  }
+    
+  .works_main_three span.works_text_three h2 {
+      text-align: center;
+      font-size: 1.3rem;
+      padding: 0rem 1rem;
+      font-weight: 500;
+      width: 100%;
   }
 
-  .main_three_img p {
-    position: absolute; /* 추가 */
-    bottom: 0; /* 추가 */
-    left: 0; /* 추가 */
-    width: 100%; /* 추가 */
-    margin: 0;
-    padding: 0.5rem 0.5rem;
-    font-size: 0.9rem;
-    background-color: #0e0e0e;
-    color: #fff;
-    font-weight: 600;
+  .works_main_three span.works_text_three h3 {
+      text-align: center;
+      font-size: 0.9rem;
+      padding: 0rem 1rem;
+      margin: 0 0 1rem 0;
+      font-weight: 400;
+      width: 100%;
+      height: 70px;
+  }
+    
+  .works_main_three span.works_text_three p {
+      text-align: start;
+      font-size: 0.9rem;
+      padding: 0rem 1rem;
+      font-weight: 300;
+      width: 100%;
+      margin: 0.2rem;
+  }
+
+  .works_main_three span img {
+      width: 100%;
+      height: 100%;
+      transition: transform 0.3s;
+  }
+
+  .works_main_three:hover img {
+      transform: scale(1.1);
+      transform-origin: center;
+  }
+
+  .works_main_three h2 {
+      font-size: 1rem;
+      margin: 0.5rem auto;
+      font-weight: 600;
+      text-align: center;
   }
 
   /* 홈페이지 네번째 단 */  
