--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -20,7 +20,7 @@
 
       <div class="img_about_main">
         <div class="img_about_one">NEWS</div>
-        <div class="img_about_two">최고의 이야기를 담은 영화를 제작, 감동과 재미를 넘어선 경험을 선사합니다.</div>
+        <div class="img_about_two">최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다.</div>
       </div>
   </div>
   <div class="about_animation">
