--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -25,203 +25,219 @@
 
   <div class="main_poster" style="background-color: #fafafa;">
     <div class="main_poster_wrapper">
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 12%}'">
           <img src="{% static 'img/poster1.jpg' %}">
           <p>스텔라</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 11%}'">
           <img src="{% static 'img/poster2.jpg' %}">
           <p>강릉</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 10%}'">
           <img src="{% static 'img/poster3.jpg' %}">
           <p>동네사람들</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 8%}'">
           <img src="{% static 'img/poster5.jpg' %}">
           <p>그래, 가족</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 7%}'">
           <img src="{% static 'img/poster6.jpg' %}">
           <p>함정</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 6%}'">
           <img src="{% static 'img/poster7.jpg' %}">
           <p>감기</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 5%}'">
           <img src="{% static 'img/poster8.jpg' %}">
           <p>그대를 사랑합니다</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 4%}'">
           <img src="{% static 'img/poster9.jpg' %}">
           <p>마을금고 연쇄 습격사건</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 9%}'">
           <img src="{% static 'img/poster4.jpg' %}">
           <p>원더풀고스트</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 3%}'">
           <img src="{% static 'img/poster10.jpg' %}">
           <p>싸움의 기술</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 2%}'">
           <img src="{% static 'img/poster11.jpg' %}">
           <p>마파도</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 13%}'">
           <img src="{% static 'img/poster12.jpg' %}">
           <p>오후 4시</p>
+        </div>
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 1%}'">
+          <img src="{% static 'img/poster13.jpg' %}">
+          <p>맹부삼천지교</p>
         </div>
       </div>
-    <div class="main_poster_wrapper">
-        <div class="main_poster_img">
+      <div class="main_poster_wrapper">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 12%}'">
           <img src="{% static 'img/poster1.jpg' %}">
           <p>스텔라</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 11%}'">
           <img src="{% static 'img/poster2.jpg' %}">
           <p>강릉</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 10%}'">
           <img src="{% static 'img/poster3.jpg' %}">
           <p>동네사람들</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 8%}'">
           <img src="{% static 'img/poster5.jpg' %}">
           <p>그래, 가족</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 7%}'">
           <img src="{% static 'img/poster6.jpg' %}">
           <p>함정</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 6%}'">
           <img src="{% static 'img/poster7.jpg' %}">
           <p>감기</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 5%}'">
           <img src="{% static 'img/poster8.jpg' %}">
           <p>그대를 사랑합니다</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 4%}'">
           <img src="{% static 'img/poster9.jpg' %}">
           <p>마을금고 연쇄 습격사건</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 9%}'">
           <img src="{% static 'img/poster4.jpg' %}">
           <p>원더풀고스트</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 3%}'">
           <img src="{% static 'img/poster10.jpg' %}">
           <p>싸움의 기술</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 2%}'">
           <img src="{% static 'img/poster11.jpg' %}">
           <p>마파도</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 13%}'">
           <img src="{% static 'img/poster12.jpg' %}">
           <p>오후 4시</p>
+        </div>
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 1%}'">
+          <img src="{% static 'img/poster13.jpg' %}">
+          <p>맹부삼천지교</p>
         </div>
       </div>
-    <div class="main_poster_wrapper">
-        <div class="main_poster_img">
+      <div class="main_poster_wrapper">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 12%}'">
           <img src="{% static 'img/poster1.jpg' %}">
           <p>스텔라</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 11%}'">
           <img src="{% static 'img/poster2.jpg' %}">
           <p>강릉</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 10%}'">
           <img src="{% static 'img/poster3.jpg' %}">
           <p>동네사람들</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 8%}'">
           <img src="{% static 'img/poster5.jpg' %}">
           <p>그래, 가족</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 7%}'">
           <img src="{% static 'img/poster6.jpg' %}">
           <p>함정</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 6%}'">
           <img src="{% static 'img/poster7.jpg' %}">
           <p>감기</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 5%}'">
           <img src="{% static 'img/poster8.jpg' %}">
           <p>그대를 사랑합니다</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 4%}'">
           <img src="{% static 'img/poster9.jpg' %}">
           <p>마을금고 연쇄 습격사건</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 9%}'">
           <img src="{% static 'img/poster4.jpg' %}">
           <p>원더풀고스트</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 3%}'">
           <img src="{% static 'img/poster10.jpg' %}">
           <p>싸움의 기술</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 2%}'">
           <img src="{% static 'img/poster11.jpg' %}">
           <p>마파도</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 13%}'">
           <img src="{% static 'img/poster12.jpg' %}">
           <p>오후 4시</p>
+        </div>
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 1%}'">
+          <img src="{% static 'img/poster13.jpg' %}">
+          <p>맹부삼천지교</p>
         </div>
       </div>
-    <div class="main_poster_wrapper">
-        <div class="main_poster_img">
+      <div class="main_poster_wrapper">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 12%}'">
           <img src="{% static 'img/poster1.jpg' %}">
           <p>스텔라</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 11%}'">
           <img src="{% static 'img/poster2.jpg' %}">
           <p>강릉</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 10%}'">
           <img src="{% static 'img/poster3.jpg' %}">
           <p>동네사람들</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 8%}'">
           <img src="{% static 'img/poster5.jpg' %}">
           <p>그래, 가족</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 7%}'">
           <img src="{% static 'img/poster6.jpg' %}">
           <p>함정</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 6%}'">
           <img src="{% static 'img/poster7.jpg' %}">
           <p>감기</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 5%}'">
           <img src="{% static 'img/poster8.jpg' %}">
           <p>그대를 사랑합니다</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 4%}'">
           <img src="{% static 'img/poster9.jpg' %}">
           <p>마을금고 연쇄 습격사건</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 9%}'">
           <img src="{% static 'img/poster4.jpg' %}">
           <p>원더풀고스트</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 3%}'">
           <img src="{% static 'img/poster10.jpg' %}">
           <p>싸움의 기술</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 2%}'">
           <img src="{% static 'img/poster11.jpg' %}">
           <p>마파도</p>
         </div>
-        <div class="main_poster_img">
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 13%}'">
           <img src="{% static 'img/poster12.jpg' %}">
           <p>오후 4시</p>
+        </div>
+        <div class="main_poster_img" onclick="location.href='{% url 'works:detail' 1%}'">
+          <img src="{% static 'img/poster13.jpg' %}">
+          <p>맹부삼천지교</p>
         </div>
       </div>
   </div>
