main modify2 upload

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -726,6 +726,11 @@ body {
     font-weight: 700;
   }
 
+  .main_poster:hover > .main_poster_wrapper {
+    animation-play-state: paused;
+    cursor: pointer;
+  }
+
   @keyframes loop {
     100% {
       transform: translateX(-100%);
@@ -1195,6 +1200,11 @@ body {
     padding-top: 0.5rem;
     font-size: 1rem;
     font-weight: 700;
+  }
+
+  .main_poster:hover > .main_poster_wrapper {
+    animation-play-state: paused;
+    cursor: pointer;
   }
 
   @keyframes loop {
