--- a/templates/works/works.html
+++ b/templates/works/works.html
@@ -7,7 +7,7 @@
 <link rel="icon" href="{% static 'img/logo.png' %}"/>
 
 <meta property="og:title" content="스튜디오야수 작품 소개"/> 
-<!-- <meta property="og:url" content=""/> -->
+<meta property="og:url" content="https://www.studiobeast.co.kr/works/"/>
 <meta property="og:type" content="homepage"/>
 <meta property="og:description" content="최고의 이야기를 담은 영화를 제작, 감동과 재미를 넘어선 경험을 선사합니다."/> 
 <meta property="og:image" content="{% static 'img/background.jpg' %}"/>
