main modify4 upload

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="naver-site-verification" content="3e4759bd6743f8b28e58618b5f75989db1dd16e4" />
     {% block title %}
     {% endblock %}
     
