main modify5 upload

--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -3,13 +3,13 @@
 {% block title %}
 <title>스튜디오야수 오시는 길</title>
 <meta name="title" content="스튜디오야수 오시는 길"/>
-<meta name="description" content="최고의 이야기를 담은 영화를 제작, 감동과 재미를 넘어선 경험을 선사합니다."/>
+<meta name="description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/>
 <link rel="icon" href="{% static 'img/logo.png' %}"/>
 
 <meta property="og:title" content="스튜디오야수 오시는 길"/> 
 <meta property="og:url" content="https://www.studiobeast.co.kr/contact/"/>
 <meta property="og:type" content="homepage"/>
-<meta property="og:description" content="최고의 이야기를 담은 영화를 제작, 감동과 재미를 넘어선 경험을 선사합니다."/> 
+<meta property="og:description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/> 
 <meta property="og:image" content="{% static 'img/background.jpg' %}"/>
 <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=w8rvzud9vg"></script>
 {% endblock %}
